filter overflow fix

--- a/client/src/components/filter/MenuList.css
+++ b/client/src/components/filter/MenuList.css
@@ -8,5 +8,10 @@
   flex-direction: column;
   gap: 10px;
   overflow-x: auto;
+  overflow-y: auto;
   max-height: 450px;
+}
+
+.menu-list h3 {
+  cursor: pointer;
 }
